--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
 	"name": "print-friendly",
 	"version": "0.2.0",
 	"description": "Convert a markdown file to a print-ready, styled HTML file",
-	"main": "index.js",
-	"scripts": {},
+	"main": "index.css",
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/hyunbinseo/print-friendly.git"
@@ -24,6 +23,7 @@
 	},
 	"homepage": "https://github.com/hyunbinseo/print-friendly#readme",
 	"files": [
-		"dist"
-	]
+		"index.css"
+	],
+	"packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
 }
